[DAQ-1840] Improve QuantityFactoryTest
- One function per test case
- Test creation of Quantity from more types of object
- Use assertEquals()/assertNull() where possible instead of
assertTrue

Change-Id: Ibe881bc07e6e5638f320eee78f89bb18b520b1ba