@@ -19,499 +19,561 @@
 
 package gda.util;
 
-import static org.junit.Assert.assertFalse;
+import static org.jscience.physics.units.NonSI.ANGSTROM;
+import static org.jscience.physics.units.NonSI.DEGREE_ANGLE;
+import static org.jscience.physics.units.NonSI.ELECTRON_VOLT;
+import static org.jscience.physics.units.SI.HERTZ;
+import static org.jscience.physics.units.SI.METER;
+import static org.jscience.physics.units.SI.METER_PER_SECOND;
+import static org.jscience.physics.units.SI.MICRO;
+import static org.jscience.physics.units.SI.MILLI;
+import static org.jscience.physics.units.SI.NANO;
+import static org.jscience.physics.units.SI.RADIAN;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertNotEquals;
+import static org.junit.Assert.assertNull;
 import static org.junit.Assert.assertTrue;
 
+import org.jscience.physics.quantities.Dimensionless;
 import org.jscience.physics.quantities.Quantity;
-import org.jscience.physics.units.NonSI;
-import org.jscience.physics.units.SI;
+import org.jscience.physics.units.ConversionException;
 import org.jscience.physics.units.Unit;
 import org.junit.Test;
+import org.python.core.PyFloat;
+import org.python.core.PyInteger;
+import org.python.core.PyString;
 
 /**
  * Test suite for QuantityFactory class
  */
 public class QuantityFactoryTest {
-	private Quantity q, q1;
-	private String value, valueUnitStr;
-	private String unitString;
-	private final double maxDouble = Double.MAX_VALUE;
-	private final double minDouble = Double.MIN_VALUE;
-	private final double maxNegDouble = -Double.MAX_VALUE;
-	private final double minNegDouble = -Double.MIN_VALUE;
-	private Unit<?> u;
+	private static final double MAX_DOUBLE = Double.MAX_VALUE;
+	private static final double MIN_DOUBLE = Double.MIN_VALUE;
+	private static final double MAX_NEG_DOUBLE = -Double.MAX_VALUE;
+	private static final double MIN_NEG_DOUBLE = -Double.MIN_VALUE;
 
-	/**
-	 * Test creation of length quantities
-	 */
+	// -----------------------------------------------------------------------
+	// Test creation of length quantities
+	// -----------------------------------------------------------------------
 	@Test
 	public void testCreateLengthQuantity() {
-		// *** valid lengths that should work
+		// quantity constructed from single string length and unit, space separated
+		final double value = 12.34;
+		final String valueUnitString = "12.34 mm";
+		final Quantity expected = Quantity.valueOf(Double.valueOf(value), MILLI(METER));
+		final Quantity result = QuantityFactory.createFromString(valueUnitString);
+		assertEquals(expected, result);
 
-		// quantity constructed from single string length and unit, space
-		// separated
-		value = "12.34";
-		valueUnitStr = value + " mm";
-		q = Quantity.valueOf(Double.valueOf(value), SI.MILLI(SI.METER));
-		assertTrue("quantity factory length not at expected value " + valueUnitStr, q.equals(QuantityFactory
-				.createFromString(valueUnitStr)));
+		// SI unit for length is metres, so result's doubleValue() will return this
+		assertEquals((value / 1000.0), result.doubleValue(), 0.00001);
+	}
 
-		// check quantity can yield creation string - internally stored in meters
-		// so comes back as such (alas).
-		String ValueMeters = Double.toString((new Double(value).doubleValue()) / 1000.);
-		String outVal = new Double(q.doubleValue()).toString();
-		assertTrue(outVal.equals(ValueMeters));
+	@Test
+	public void testCreateLengthQuantityNoSpace() {
+		// quantity constructed from single string length and unit, no space separation
+		final double value = 56.78e-2;
+		final String valueUnitString = "56.78e-2mm";
+		final Quantity expected = Quantity.valueOf(Double.valueOf(value), MILLI(METER));
+		assertEquals(expected, QuantityFactory.createFromString(valueUnitString));
+	}
 
-		// quantity constructed from single string length and unit, no space
-		// separation
-		value = "56.78e-2";
-		valueUnitStr = value + "mm";
-		q = Quantity.valueOf(Double.valueOf(value), SI.MILLI(SI.METER));
-		assertTrue("quantity factory length not at expected value " + valueUnitStr, q.equals(QuantityFactory
-				.createFromString(valueUnitStr)));
-
+	@Test
+	public void testCreateLengthQuantityTwoStrings() {
 		// quantity constructed from two strings, length and unit
-		unitString = "mm";
-		value = "-187.89";
-		q = Quantity.valueOf(Double.valueOf(value), SI.MILLI(SI.METER));
-		assertTrue("quantity factory length not at expected value " + value + unitString, q.equals(QuantityFactory
-				.createFromTwoStrings(value, unitString)));
+		final String unitString = "mm";
+		final double value = -187.89;
+		final String valueString = "-187.89";
+		final Quantity expected = Quantity.valueOf(value, MILLI(METER));
+		assertEquals(expected, QuantityFactory.createFromTwoStrings(valueString, unitString));
+	}
 
+	@Test
+	public void testCreateLengthQuantityTwoStringsNegative() {
 		// quantity constructed from two strings, -ve length and unit
-		unitString = "nm";
-		value = "-0.3";
-		q = Quantity.valueOf(Double.valueOf(value), SI.NANO(SI.METER));
-		assertTrue("quantity factory length not at expected value " + value + unitString, q.equals(QuantityFactory
-				.createFromTwoStrings(value, unitString)));
+		final String unitString = "nm";
+		final String valueString = "-0.3";
+		final double value = -0.3;
+		final Quantity expected = Quantity.valueOf(value, NANO(METER));
+		assertEquals(expected, QuantityFactory.createFromTwoStrings(valueString, unitString));
+	}
 
+	@Test
+	public void testCreateLengthQuantityTwoStringsMicrons() {
 		// quantity constructed from two strings, length and unit
 		// !!! fails if use equals() instead of approxEquals !!!
-		unitString = "micron";
-		value = "0.1";
-		q = Quantity.valueOf(Double.valueOf(value), SI.MICRO(SI.METER));
-		assertTrue("quantity factory length not at expected value " + value + unitString, q
-				.approxEquals(QuantityFactory.createFromTwoStrings(value, unitString)));
+		final String unitString = "micron";
+		final String value = "0.1";
+		final Quantity expected = Quantity.valueOf(Double.valueOf(value), MICRO(METER));
+		final Quantity result = QuantityFactory.createFromTwoStrings(value, unitString);
+		assertTrue(result.approxEquals(expected));
+	}
 
+	@Test
+	public void testCreateLengthQuantityTwoStringsAngstroms() {
 		// quantity constructed from two strings, length and unit
 		// !!! fails if use equals() instead of approxEquals !!!
-		unitString = "Ang";
-		value = "1.2";
-		q = Quantity.valueOf(Double.valueOf(value), NonSI.ANGSTROM);
-		q1 = QuantityFactory.createFromTwoStrings(value, unitString);
-		assertTrue("quantity factory length not at expected value " + value + unitString, q.approxEquals(q1));
+		final String unitString = "Ang";
+		final String value = "1.2";
+		final Quantity expected = Quantity.valueOf(Double.valueOf(value), ANGSTROM);
+		final Quantity result = QuantityFactory.createFromTwoStrings(value, unitString);
+		assertTrue(result.approxEquals(expected));
+	}
 
-		// *** range tests
+	@Test
+	public void testCreateLengthQuantityMinValueMilli() {
+		final String valueString = Double.toString(MIN_DOUBLE) + " mm";
+		final Quantity expected = Quantity.valueOf(MIN_DOUBLE, MILLI(METER));
+		assertEquals(expected, QuantityFactory.createFromString(valueString));
+	}
 
-		// max and min double values for mm
-		value = Double.toString(minDouble);
-		valueUnitStr = value + " mm";
-		q = Quantity.valueOf(minDouble, SI.MILLI(SI.METER));
-		assertTrue("quantity factory length not at expected value " + valueUnitStr, q.equals(QuantityFactory
-				.createFromString(valueUnitStr)));
+	@Test
+	public void testCreateLengthQuantityMaxValueMilli() {
+		final String valueString = Double.toString(MAX_DOUBLE) + " mm";
+		final Quantity expected = Quantity.valueOf(MAX_DOUBLE, MILLI(METER));
+		assertEquals(expected, QuantityFactory.createFromString(valueString));
+	}
 
-		value = Double.toString(maxDouble);
-		valueUnitStr = value + " mm";
-		q = Quantity.valueOf(maxDouble, SI.MILLI(SI.METER));
-		assertTrue("quantity factory length not at expected value " + valueUnitStr, q.equals(QuantityFactory
-				.createFromString(valueUnitStr)));
+	@Test
+	public void testCreateLengthQuantityMinNegativeValueMilli() {
+		final String valueString = Double.toString(MIN_NEG_DOUBLE) + " mm";
+		final Quantity expected = Quantity.valueOf(MIN_NEG_DOUBLE, MILLI(METER));
+		assertEquals(expected, QuantityFactory.createFromString(valueString));
+	}
 
-		value = Double.toString(minNegDouble);
-		valueUnitStr = value + " mm";
-		q = Quantity.valueOf(minNegDouble, SI.MILLI(SI.METER));
-		assertTrue("quantity factory length not at expected value " + valueUnitStr, q.equals(QuantityFactory
-				.createFromString(valueUnitStr)));
+	@Test
+	public void testCreateLengthQuantityMaxNegativeValueMilli() {
+		final String valueString = Double.toString(MAX_NEG_DOUBLE) + " mm";
+		final Quantity expected = Quantity.valueOf(MAX_NEG_DOUBLE, MILLI(METER));
+		assertEquals(expected, QuantityFactory.createFromString(valueString));
+	}
 
-		value = Double.toString(maxNegDouble);
-		valueUnitStr = value + " mm";
-		q = Quantity.valueOf(maxNegDouble, SI.MILLI(SI.METER));
-		assertTrue("quantity factory length not at expected value " + valueUnitStr, q.equals(QuantityFactory
-				.createFromString(valueUnitStr)));
+	@Test
+	public void testCreateLengthQuantityMinValueNano() {
+		final String valueString = Double.toString(MIN_DOUBLE) + " nm";
+		final Quantity expected = Quantity.valueOf(MIN_DOUBLE, NANO(METER));
+		assertEquals(expected, QuantityFactory.createFromString(valueString));
+	}
 
-		// max and min double values for nm
-		value = Double.toString(minDouble);
-		valueUnitStr = value + " nm";
-		q = Quantity.valueOf(minDouble, SI.NANO(SI.METER));
-		assertTrue("quantity factory length not at expected value " + valueUnitStr, q.equals(QuantityFactory
-				.createFromString(valueUnitStr)));
+	@Test
+	public void testCreateLengthQuantityMaxValueNano() {
+		final String valueString = Double.toString(MAX_DOUBLE) + " nm";
+		final Quantity expected = Quantity.valueOf(MAX_DOUBLE, NANO(METER));
+		assertEquals(expected, QuantityFactory.createFromString(valueString));
+	}
 
-		value = Double.toString(maxDouble);
-		valueUnitStr = value + " nm";
-		q = Quantity.valueOf(maxDouble, SI.NANO(SI.METER));
-		assertTrue("quantity factory length not at expected value " + valueUnitStr, q.equals(QuantityFactory
-				.createFromString(valueUnitStr)));
+	@Test
+	public void testCreateLengthQuantityMinNegativeValueNano() {
+		final String valueString = Double.toString(MIN_NEG_DOUBLE) + " nm";
+		final Quantity expected = Quantity.valueOf(MIN_NEG_DOUBLE, NANO(METER));
+		assertEquals(expected, QuantityFactory.createFromString(valueString));
+	}
 
-		value = Double.toString(minNegDouble);
-		valueUnitStr = value + " nm";
-		q = Quantity.valueOf(minNegDouble, SI.NANO(SI.METER));
-		assertTrue("quantity factory length not at expected value " + valueUnitStr, q.equals(QuantityFactory
-				.createFromString(valueUnitStr)));
+	@Test
+	public void testCreateLengthQuantityMaxNegativeValueNano() {
+		final String valueString = Double.toString(MAX_NEG_DOUBLE) + " nm";
+		final Quantity expected = Quantity.valueOf(MAX_NEG_DOUBLE, NANO(METER));
+		assertEquals(expected, QuantityFactory.createFromString(valueString));
+	}
 
-		value = Double.toString(maxNegDouble);
-		valueUnitStr = value + " nm";
-		q = Quantity.valueOf(maxNegDouble, SI.NANO(SI.METER));
-		assertTrue("quantity factory length not at expected value " + valueUnitStr, q.equals(QuantityFactory
-				.createFromString(valueUnitStr)));
-
-		// max and min double values for Angstroms
+	@Test
+	public void testCreateLengthQuantityMinValueAngstrom() {
 		// !!! fails if use equals() instead of approxEquals !!!
-		value = Double.toString(minDouble);
-		valueUnitStr = value + " Ang";
-		q = Quantity.valueOf(minDouble, NonSI.ANGSTROM);
-		assertTrue("quantity factory length not at expected value " + valueUnitStr, q.approxEquals(QuantityFactory
-				.createFromString(valueUnitStr)));
+		final String valueString = Double.toString(MIN_DOUBLE) + " Ang";
+		final Quantity expected = Quantity.valueOf(MIN_DOUBLE, ANGSTROM);
+		assertTrue(expected.approxEquals(QuantityFactory.createFromString(valueString)));
+	}
 
-		value = Double.toString(maxDouble);
-		valueUnitStr = value + " Ang";
-		q = Quantity.valueOf(maxDouble, NonSI.ANGSTROM);
-		assertTrue("quantity factory length not at expected value " + valueUnitStr, q.approxEquals(QuantityFactory
-				.createFromString(valueUnitStr)));
+	@Test
+	public void testCreateLengthQuantityMaxValueAngstrom() {
+		// !!! fails if use equals() instead of approxEquals !!!
+		final String valueString = Double.toString(MAX_DOUBLE) + " Ang";
+		final Quantity expected = Quantity.valueOf(MAX_DOUBLE, ANGSTROM);
+		assertTrue(expected.approxEquals(QuantityFactory.createFromString(valueString)));
+	}
 
-		value = Double.toString(minNegDouble);
-		valueUnitStr = value + " Ang";
-		q = Quantity.valueOf(minNegDouble, NonSI.ANGSTROM);
-		assertTrue("quantity factory length not at expected value " + valueUnitStr, q.approxEquals(QuantityFactory
-				.createFromString(valueUnitStr)));
+	@Test
+	public void testCreateLengthQuantityMinNegativeValueAngstrom() {
+		// !!! fails if use equals() instead of approxEquals !!!
+		final String valueString = Double.toString(MIN_NEG_DOUBLE) + " Ang";
+		final Quantity expected = Quantity.valueOf(MIN_NEG_DOUBLE, ANGSTROM);
+		assertTrue(expected.approxEquals(QuantityFactory.createFromString(valueString)));
+	}
 
-		value = Double.toString(maxNegDouble);
-		valueUnitStr = value + " Ang";
-		q = Quantity.valueOf(maxNegDouble, NonSI.ANGSTROM);
-		assertTrue("quantity factory length not at expected value " + valueUnitStr, q.approxEquals(QuantityFactory
-				.createFromString(valueUnitStr)));
+	@Test
+	public void testCreateLengthQuantityMaxNegativeValueAngstrom() {
+		// !!! fails if use equals() instead of approxEquals !!!
+		final String valueString = Double.toString(MAX_NEG_DOUBLE) + " Ang";
+		final Quantity expected = Quantity.valueOf(MAX_NEG_DOUBLE, ANGSTROM);
+		assertTrue(expected.approxEquals(QuantityFactory.createFromString(valueString)));
+	}
 
-		// *** invalid requested values
-
+	// -------------------------------------------------------------------------------------
+	// Test creating length quantities with invalid input
+	// -------------------------------------------------------------------------------------
+	@Test
+	public void testCreateLengthQuantityMismatchedUnits() {
 		// mismatch in factory and length generated units
-		unitString = "micron";
-		value = "187.27";
-		q = Quantity.valueOf(Double.valueOf(value), SI.MILLI(SI.METER));
-		assertTrue("quantity factory length at unexpected value " + value + unitString, !q.equals(QuantityFactory
-				.createFromTwoStrings(value, unitString)));
+		final String valueString = "187.27";
+		final String unitString = "micron";
+		final Quantity unexpected = Quantity.valueOf(187.27, MILLI(METER));
+		assertNotEquals(unexpected, QuantityFactory.createFromTwoStrings(valueString, unitString));
+	}
 
+	@Test
+	public void testCreateLengthQuantityFromStringNull() {
 		// quantity constructed from single null value string (no unit)
-		value = null;
-		assertTrue("quantity factory quantity should be null", null == QuantityFactory.createFromString(value));
-
-		// quantity constructed from two strings, a value and a null unit
-		unitString = null;
-		value = "12.89";
-		assertTrue("quantity factory quantity should be null", null == QuantityFactory.createFromTwoStrings(value,
-				unitString));
-
-		// quantity constructed from two strings, a null value and a length unit
-		unitString = "mm";
-		value = null;
-		assertTrue("quantity factory quantity should be null", null == QuantityFactory.createFromTwoStrings(value,
-				unitString));
-
-		// quantity constructed from two strings, a null value and a null unit
-		unitString = null;
-		value = null;
-
-		assertTrue("quantity factory quantity should be " + value, null == QuantityFactory.createFromTwoStrings(value,
-				unitString));
-
-		// quantity constructed from single string, a null value
-		value = "";
-
-		assertTrue("quantity factory quantity should be null", null == QuantityFactory.createFromString(value));
+		assertNull(QuantityFactory.createFromString(null));
 	}
 
-	/**
-	 * Test creation of angle quantities
-	 */
 	@Test
-	public void testCreateAngleQuantity() {
-		// *** valid angles that should work
-
-		// quantity constructed from single string radian angle and unit, space
-		// separated
-		value = "2.3";
-		valueUnitStr = value + " rad";
-		q = Quantity.valueOf(Double.valueOf(value), SI.RADIAN);
-		assertTrue("quantity factory angle not at expected value " + valueUnitStr, q.equals(QuantityFactory
-				.createFromString(valueUnitStr)));
-
-		// quantity constructed from single string mRadian angle and unit, space
-		// separated
-		// !!! fails if use equals() instead of approxEquals !!!
-		value = ".0099";
-		valueUnitStr = value + " mRad";
-		q = Quantity.valueOf(Double.valueOf(value), SI.MILLI(SI.RADIAN));
-		assertTrue("quantity factory angle not at expected value " + valueUnitStr, q.approxEquals(QuantityFactory
-				.createFromString(valueUnitStr)));
-
-		// quantity constructed from single string uradian angle and unit, not
-		// space separated
-		// !!! fails if use equals() instead of approxEquals !!!
-		value = "99";
-		valueUnitStr = value + "uRad";
-		q = Quantity.valueOf(Double.valueOf(value), SI.MICRO(SI.RADIAN));
-		assertTrue("quantity factory angle not at expected value " + valueUnitStr, q.approxEquals(QuantityFactory
-				.createFromString(valueUnitStr)));
-
-		// quantity constructed from single string degree angle and unit, space
-		// separated
-		// !!! fails if use equals() instead of approxEquals !!!
-		value = "360";
-		valueUnitStr = value + " Deg";
-		q = Quantity.valueOf(Double.valueOf(value), NonSI.DEGREE_ANGLE);
-		assertTrue("quantity factory angle not at expected value " + valueUnitStr, q.approxEquals(QuantityFactory
-				.createFromString(valueUnitStr)));
-
-		// quantity constructed from single string radian angle and unit, not
-		// space separated
-		// !!! fails if use equals() instead of approxEquals !!!
-		value = "-360";
-		valueUnitStr = value + " mDeg";
-		q = Quantity.valueOf(Double.valueOf(value), SI.MILLI(NonSI.DEGREE_ANGLE));
-		assertTrue("quantity factory angle not at expected value " + valueUnitStr, q.approxEquals(QuantityFactory
-				.createFromString(valueUnitStr)));
-
-		// *** range tests
-
-		// max and min double values for Deg
-		// !!! fails if use equals() instead of approxEquals !!!
-		value = Double.toString(minDouble);
-		valueUnitStr = value + " Deg";
-		q = Quantity.valueOf(minDouble, NonSI.DEGREE_ANGLE);
-		assertTrue("quantity factory length not at expected value " + valueUnitStr, q.approxEquals(QuantityFactory
-				.createFromString(valueUnitStr)));
-
-		value = Double.toString(maxDouble);
-		valueUnitStr = value + " Deg";
-		q = Quantity.valueOf(maxDouble, NonSI.DEGREE_ANGLE);
-		assertTrue("quantity factory length not at expected value " + valueUnitStr, q.approxEquals(QuantityFactory
-				.createFromString(valueUnitStr)));
-
-		// max and min double values for mDeg
-		// !!! fails if use equals() instead of approxEquals !!!
-		value = Double.toString(minDouble);
-		valueUnitStr = value + " mDeg";
-		q = Quantity.valueOf(minDouble, SI.MILLI(NonSI.DEGREE_ANGLE));
-		assertTrue("quantity factory length not at expected value " + valueUnitStr, q.approxEquals(QuantityFactory
-				.createFromString(valueUnitStr)));
-
-		value = Double.toString(maxDouble);
-		valueUnitStr = value + " mDeg";
-		q = Quantity.valueOf(maxDouble, SI.MILLI(NonSI.DEGREE_ANGLE));
-		assertTrue("quantity factory length not at expected value " + valueUnitStr, q.approxEquals(QuantityFactory
-				.createFromString(valueUnitStr)));
-
-		// max and min double values for mRad
-		// !!! fails if use equals() instead of approxEquals !!!
-		value = Double.toString(minDouble);
-		valueUnitStr = value + " mRad";
-		q = Quantity.valueOf(minDouble, SI.MILLI(SI.RADIAN));
-		assertTrue("quantity factory length not at expected value " + valueUnitStr, q.approxEquals(QuantityFactory
-				.createFromString(valueUnitStr)));
-
-		value = Double.toString(maxDouble);
-		valueUnitStr = value + " mRad";
-		q = Quantity.valueOf(maxDouble, SI.MILLI(SI.RADIAN));
-		assertTrue("quantity factory length not at expected value " + valueUnitStr, q.approxEquals(QuantityFactory
-				.createFromString(valueUnitStr)));
-
-		// max and min double values for uRad
-		// !!! fails if use equals() instead of approxEquals !!!
-		value = Double.toString(minDouble);
-		valueUnitStr = value + " uRad";
-		q = Quantity.valueOf(minDouble, SI.MICRO(SI.RADIAN));
-		assertTrue("quantity factory length not at expected value " + valueUnitStr, q.approxEquals(QuantityFactory
-				.createFromString(valueUnitStr)));
-
-		value = Double.toString(maxDouble);
-		valueUnitStr = value + " uRad";
-		q = Quantity.valueOf(maxDouble, SI.MICRO(SI.RADIAN));
-		assertTrue("quantity factory length not at expected value " + valueUnitStr, q.approxEquals(QuantityFactory
-				.createFromString(valueUnitStr)));
-
-		// *** invalid requested values
-
+	public void testCreateLengthQuantityFromTwoStringsNullUnit() {
+		assertNull(QuantityFactory.createFromTwoStrings("12.89", null));
 	}
 
-	/**
-	 * Test creation of other quantities
-	 */
 	@Test
-	public void testCreateOtherQuantity() {
-		// *** valid values that should work
+	public void testCreateLengthQuantityFromTwoStringsNullValue() {
+		assertNull(QuantityFactory.createFromTwoStrings(null, "mm"));
+	}
 
-		// quantity constructed from single string eV value and unit, space
-		// separated
-		value = "2.3";
-		valueUnitStr = value + " eV";
-		q = Quantity.valueOf(Double.valueOf(value), NonSI.ELECTRON_VOLT);
-		assertTrue("quantity factory quantity not at expected value " + valueUnitStr, q.equals(QuantityFactory
-				.createFromString(valueUnitStr)));
+	@Test
+	public void testCreateLengthQuantityFromTwoStringsNullValueAndUnit() {
+		assertNull(QuantityFactory.createFromTwoStrings(null, null));
+	}
 
+	@Test
+	public void testCreateLengthQuantityFromTwoStringsInvalidValue() {
+		assertNull(QuantityFactory.createFromTwoStrings("abcdef", "mm"));
+	}
+
+	@Test
+	public void testCreateLengthQuantityFromEmptyString() {
+		assertNull(QuantityFactory.createFromString(""));
+	}
+
+	// -------------------------------------------------------------------------------------
+	// Test creation of angle quantities
+	// -------------------------------------------------------------------------------------
+	@Test
+	public void testCreateAngleQuantityRadianWithSpace() {
+		// quantity constructed from single string radian angle and unit, space separated
+		final String valueString = "2.3 rad";
+		final Quantity expected = Quantity.valueOf(2.3, RADIAN);
+		assertEquals(expected, QuantityFactory.createFromString(valueString));
+	}
+
+	@Test
+	public void testCreateAngleQuantityMilliradianWithSpace() {
+		// quantity constructed from single string mRadian angle and unit, space separated
+		// !!! fails if use equals() instead of approxEquals !!!
+		final String valueString = "0.0099 mRad";
+		final Quantity expected = Quantity.valueOf(0.0099, MILLI(RADIAN));
+		assertTrue(expected.approxEquals(QuantityFactory.createFromString(valueString)));
+	}
+
+	@Test
+	public void testCreateAngleQuantityMicroradianNoSpace() {
+		// quantity constructed from single string uradian angle and unit, not space separated
+		// !!! fails if use equals() instead of approxEquals !!!
+		final String valueString = "99 uRad";
+		final Quantity expected = Quantity.valueOf(99, MICRO(RADIAN));
+		assertTrue(expected.approxEquals(QuantityFactory.createFromString(valueString)));
+	}
+
+	@Test
+	public void testCreateAngleQuantityDegreeWithSpace() {
+		// quantity constructed from single string degree angle and unit, space separated
+		// !!! fails if use equals() instead of approxEquals !!!
+		final String valueString = "360 Deg";
+		final Quantity expected = Quantity.valueOf(360, DEGREE_ANGLE);
+		assertTrue(expected.approxEquals(QuantityFactory.createFromString(valueString)));
+	}
+
+	@Test
+	public void testCreateAngleQuantityMillidegreeNoSpace() {
+		// quantity constructed from single string radian angle and unit, not space separated
+		// !!! fails if use equals() instead of approxEquals !!!
+		final String valueString = "-360mDeg";
+		final Quantity expected = Quantity.valueOf(-360, MILLI(DEGREE_ANGLE));
+		assertTrue(expected.approxEquals(QuantityFactory.createFromString(valueString)));
+	}
+
+	// -------------------------------------------------------------------------------------
+	// Range tests for angle quantities
+	// -------------------------------------------------------------------------------------
+	@Test
+	public void testCreateAngleQuantityMinDegree() {
+		// !!! fails if use equals() instead of approxEquals !!!
+		final String valueString = Double.toString(MIN_DOUBLE) + " Deg";
+		final Quantity expected = Quantity.valueOf(MIN_DOUBLE, DEGREE_ANGLE);
+		assertTrue(expected.approxEquals(QuantityFactory.createFromString(valueString)));
+	}
+
+	@Test
+	public void testCreateAngleQuantityMaxDegree() {
+		// !!! fails if use equals() instead of approxEquals !!!
+		final String valueString = Double.toString(MAX_DOUBLE) + " Deg";
+		final Quantity expected = Quantity.valueOf(MAX_DOUBLE, DEGREE_ANGLE);
+		assertTrue(expected.approxEquals(QuantityFactory.createFromString(valueString)));
+	}
+
+	@Test
+	public void testCreateAngleQuantityMinMilliDegree() {
+		// !!! fails if use equals() instead of approxEquals !!!
+		final String valueString = Double.toString(MIN_DOUBLE) + " mDeg";
+		final Quantity expected = Quantity.valueOf(MIN_DOUBLE, MILLI(DEGREE_ANGLE));
+		assertTrue(expected.approxEquals(QuantityFactory.createFromString(valueString)));
+	}
+
+	@Test
+	public void testCreateAngleQuantityMaxMilliDegree() {
+		// !!! fails if use equals() instead of approxEquals !!!
+		final String valueString = Double.toString(MAX_DOUBLE) + " mDeg";
+		final Quantity expected = Quantity.valueOf(MAX_DOUBLE, MILLI(DEGREE_ANGLE));
+		assertTrue(expected.approxEquals(QuantityFactory.createFromString(valueString)));
+	}
+
+	@Test
+	public void testCreateAngleQuantityMinMilliRadian() {
+		// !!! fails if use equals() instead of approxEquals !!!
+		final String valueString = Double.toString(MIN_DOUBLE) + " mRad";
+		final Quantity expected = Quantity.valueOf(MIN_DOUBLE, MILLI(RADIAN));
+		assertTrue(expected.approxEquals(QuantityFactory.createFromString(valueString)));
+	}
+
+	@Test
+	public void testCreateAngleQuantityMaxMilliRadian() {
+		// !!! fails if use equals() instead of approxEquals !!!
+		final String valueString = Double.toString(MAX_DOUBLE) + " mRad";
+		final Quantity expected = Quantity.valueOf(MAX_DOUBLE, MILLI(RADIAN));
+		assertTrue(expected.approxEquals(QuantityFactory.createFromString(valueString)));
+	}
+
+	@Test
+	public void testCreateAngleQuantityMinMicroRadian() {
+		// !!! fails if use equals() instead of approxEquals !!!
+		final String valueString = Double.toString(MIN_DOUBLE) + " uRad";
+		final Quantity expected = Quantity.valueOf(MIN_DOUBLE, MICRO(RADIAN));
+		assertTrue(expected.approxEquals(QuantityFactory.createFromString(valueString)));
+	}
+
+	@Test
+	public void testCreateAngleQuantityMaxMicroRadian() {
+		// !!! fails if use equals() instead of approxEquals !!!
+		final String valueString = Double.toString(MAX_DOUBLE) + " uRad";
+		final Quantity expected = Quantity.valueOf(MAX_DOUBLE, MICRO(RADIAN));
+		assertTrue(expected.approxEquals(QuantityFactory.createFromString(valueString)));
+	}
+
+	// -------------------------------------------------------------------------------------
+	// Test creation of other quantities
+	// -------------------------------------------------------------------------------------
+	@Test
+	public void testCreateElectronVolt() {
+		final String valueString = "2.3 eV";
+		final Quantity expected = Quantity.valueOf(2.3, ELECTRON_VOLT);
+		assertEquals(expected, QuantityFactory.createFromString(valueString));
+	}
+
+	@Test
+	public void testCreateNoUnit() {
 		// quantity constructed from single value string (no unit)
-		value = "2.38";
-		q = Quantity.valueOf(Double.valueOf(value), Unit.ONE);
-		assertTrue("quantity factory quantity not at expected value " + value, q.equals(QuantityFactory
-				.createFromString(value)));
+		final String valueString = "2.38";
+		final Quantity expected = Quantity.valueOf(2.38, Unit.ONE);
+		assertEquals(expected, QuantityFactory.createFromString(valueString));
+	}
 
+	@Test
+	public void testCreateEmptyUnit() {
 		// quantity constructed from two strings, a value and an empty unit
-		unitString = "";
-		value = "12.89";
-		q = Quantity.valueOf(Double.valueOf(value), Unit.ONE);
-		assertTrue("quantity factory quantity not at expected value " + value, q.equals(QuantityFactory
-				.createFromTwoStrings(value, unitString)));
-
-		// quantity constructed from single string Hz value and unit, space
-		// separated
-		value = "7.23e+5";
-		valueUnitStr = value + " Hz";
-		q = Quantity.valueOf(Double.valueOf(value), SI.HERTZ);
-		assertTrue("quantity factory angle not at expected value " + valueUnitStr, q.equals(QuantityFactory
-				.createFromString(valueUnitStr)));
-
-		// quantity constructed from single string mm/s speed and unit, not
-		// space separated
-		// !!! fails if use equals() instead of approxEquals !!!
-		value = ".1";
-		valueUnitStr = value + " mm/s";
-		q = Quantity.valueOf(Double.valueOf(value), SI.MILLI(SI.METER_PER_SECOND));
-		assertTrue("quantity factory angle not at expected value " + valueUnitStr, q.approxEquals(QuantityFactory
-				.createFromString(valueUnitStr)));
-
-		// *** range tests
-
-		// max and min double values for eV
-		// !!! fails if use equals() instead of approxEquals !!!
-		value = Double.toString(minDouble);
-		valueUnitStr = value + " eV";
-		q = Quantity.valueOf(minDouble, NonSI.ELECTRON_VOLT);
-		assertTrue("quantity factory length not at expected value " + valueUnitStr, q.approxEquals(QuantityFactory
-				.createFromString(valueUnitStr)));
-
-		value = Double.toString(maxDouble);
-		valueUnitStr = value + " eV";
-		q = Quantity.valueOf(maxDouble, NonSI.ELECTRON_VOLT);
-		assertTrue("quantity factory length not at expected value " + valueUnitStr, q.approxEquals(QuantityFactory
-				.createFromString(valueUnitStr)));
-
-		// max and min double values for Hz
-		value = Double.toString(minDouble);
-		valueUnitStr = value + " Hz";
-		q = Quantity.valueOf(minDouble, SI.HERTZ);
-		assertTrue("quantity factory length not at expected value " + valueUnitStr, q.equals(QuantityFactory
-				.createFromString(valueUnitStr)));
-
-		value = Double.toString(maxDouble);
-		valueUnitStr = value + " Hz";
-		q = Quantity.valueOf(maxDouble, SI.HERTZ);
-		assertTrue("quantity factory length not at expected value " + valueUnitStr, q.equals(QuantityFactory
-				.createFromString(valueUnitStr)));
-
-		// *** invalid requested values
+		final String valueString = "12.89";
+		final String unitString = "";
+		final Quantity expected = Quantity.valueOf(12.89, Unit.ONE);
+		assertEquals(expected, QuantityFactory.createFromTwoStrings(valueString, unitString));
 	}
 
-	/**
-	 * force an exception with null value arithmatic operation
-	 */
+	@Test
+	public void testCreateHertz() {
+		// quantity constructed from single string Hz value and unit, space separated
+		final String valueString = "7.23e+5 Hz";
+		final Quantity expected = Quantity.valueOf(7.23e+5, HERTZ);
+		assertEquals(expected, QuantityFactory.createFromString(valueString));
+	}
+
+	@Test
+	public void testCreateMillimetresPerSecond() {
+		// quantity constructed from single string mm/s speed and unit, not space separated
+		// !!! fails if use equals() instead of approxEquals !!!
+		final String valueString = ".1mm/s";
+		final Quantity expected = Quantity.valueOf(.1, MILLI(METER_PER_SECOND));
+		assertTrue(expected.approxEquals(QuantityFactory.createFromString(valueString)));
+	}
+
+	@Test
+	public void testCreateElectronVoltMinValue() {
+		final String valueString = Double.toString(MIN_DOUBLE) + " eV";
+		final Quantity expected = Quantity.valueOf(MIN_DOUBLE, ELECTRON_VOLT);
+		assertEquals(expected, QuantityFactory.createFromString(valueString));
+	}
+
+	@Test
+	public void testCreateElectronVoltMaxValue() {
+		final String valueString = Double.toString(MAX_DOUBLE) + " eV";
+		final Quantity expected = Quantity.valueOf(MAX_DOUBLE, ELECTRON_VOLT);
+		assertEquals(expected, QuantityFactory.createFromString(valueString));
+	}
+
+	@Test
+	public void testCreateHertzMinValue() {
+		final String valueString = Double.toString(MIN_DOUBLE) + " Hz";
+		final Quantity expected = Quantity.valueOf(MIN_DOUBLE, HERTZ);
+		assertEquals(expected, QuantityFactory.createFromString(valueString));
+	}
+
+	@Test
+	public void testCreateHertzMaxValue() {
+		final String valueString = Double.toString(MAX_DOUBLE) + " Hz";
+		final Quantity expected = Quantity.valueOf(MAX_DOUBLE, HERTZ);
+		assertEquals(expected, QuantityFactory.createFromString(valueString));
+	}
+
+	// -------------------------------------------------------------------------------------
+	// Test creation of length units
+	// -------------------------------------------------------------------------------------
+	@Test
+	public void testCreateLengthUnitMilli() {
+		assertEquals(MILLI(METER), QuantityFactory.createUnitFromString("mm"));
+	}
+
+	@Test
+	public void testCreateLengthUnitNano() {
+		assertEquals(NANO(METER), QuantityFactory.createUnitFromString("nm"));
+	}
+
+	// -------------------------------------------------------------------------------------
+	// Test creation of angle units
+	// -------------------------------------------------------------------------------------
+	@Test
+	public void testCreateAngleUnitRadian() {
+		assertEquals(RADIAN, QuantityFactory.createUnitFromString("rad"));
+	}
+
+	@Test
+	public void testCreateAngleUnitDegree() {
+		final Unit<? extends Quantity> degree = QuantityFactory.createUnitFromString("Deg");
+		assertTrue(degree.isCompatible(DEGREE_ANGLE));
+	}
+
+	// -------------------------------------------------------------------------------------
+	// Test creation of other (and null/empty) units
+	// -------------------------------------------------------------------------------------
+	@Test
+	public void testCreateUnitElectronVolt() {
+		assertEquals(ELECTRON_VOLT, QuantityFactory.createUnitFromString("eV"));
+	}
+
+	@Test
+	public void testCreateUnitNullString() {
+		assertNull(QuantityFactory.createUnitFromString(null));
+	}
+
+	@Test
+	public void testCreateUnitEmptyString() {
+		assertEquals(Unit.ONE, QuantityFactory.createUnitFromString(""));
+	}
+
+	@Test
+	public void testCreateUnitInvalidString() {
+		assertNull(QuantityFactory.createUnitFromString("sticksOfRhubarb"));
+	}
+
+	// -------------------------------------------------------------------------------------
+	// Test creation of from other objects
+	// -------------------------------------------------------------------------------------
+	@Test
+	public void testCreateFromObjectDouble() {
+		final double value = 3.142;
+		final Quantity expected = Quantity.valueOf(value, MILLI(METER));
+		assertEquals(expected, QuantityFactory.createFromObject(new Double(value), MILLI(METER)));
+	}
+
+	@Test
+	public void testCreateFromObjectInteger() {
+		final int value = 345;
+		final Quantity expected = Quantity.valueOf(value, MILLI(METER));
+		assertEquals(expected, QuantityFactory.createFromObject(new Integer(value), MILLI(METER)));
+	}
+
+	@Test
+	public void testCreateFromObjectString() {
+		final Quantity expected = Quantity.valueOf(3.142, MILLI(METER));
+		assertEquals(expected, QuantityFactory.createFromObject("3.142 mm", MILLI(METER)));
+	}
+
+	@Test
+	public void testCreateFromObjectStringConvertUnits() {
+		final Quantity expected = Quantity.valueOf(3142, MILLI(METER));
+		assertEquals(expected, QuantityFactory.createFromObject("3.142 m", MILLI(METER)));
+	}
+
 	@Test(expected = NullPointerException.class)
-	public void testException() {
-		// exception test - a null quantity generates null pointer exception
-		double dblVal = (QuantityFactory.createFromString("")).doubleValue();
-		dblVal = dblVal / 0.;
-		assertFalse("expected null pointer exception not seen", false);
+	public void testCreateFromObjectStringInvalid() {
+		QuantityFactory.createFromObject("abcdef", MILLI(METER));
 	}
 
-	/**
-	 * Test creation of length units
-	 */
 	@Test
-	public void testCreateLengthUnit() {
-		// *** valid units that should work
-
-		// unit constructed from valid length string
-		unitString = "mm";
-		value = "12.89";
-		q = Quantity.valueOf(Double.valueOf(value), SI.MILLI(SI.METER));
-		u = q.getUnit();
-		assertTrue("unit string should be " + unitString, u.equals(QuantityFactory.createUnitFromString(unitString)));
-
-		// *** range tests
-
-		// *** invalid requested values
-
+	public void testCreateFromObjectPyString() {
+		final Quantity expected = Quantity.valueOf(7.234, MILLI(METER));
+		assertEquals(expected, QuantityFactory.createFromObject(new PyString("7.234 mm"), MILLI(METER)));
 	}
 
-	/**
-	 * Test creation of angle units
-	 */
 	@Test
-	public void testCreateAngleUnit() {
-		// *** valid units that should work
-
-		// unit constructed from valid radian angle string
-		unitString = "rad";
-		value = "12.89";
-		q = Quantity.valueOf(Double.valueOf(value), SI.RADIAN);
-		u = q.getUnit();
-		assertTrue("unit string should be " + unitString, u.equals(QuantityFactory.createUnitFromString(unitString)));
-
-		// *** range tests
-
-		// *** invalid requested values
-
+	public void testCreateFromObjectPyStringConvertUnits() {
+		final Quantity expected = Quantity.valueOf(7234, MILLI(METER));
+		assertEquals(expected, QuantityFactory.createFromObject(new PyString("7.234 m"), MILLI(METER)));
 	}
 
-	/**
-	 * Test creation of other units
-	 */
-	@Test
-	public void testCreateOtherUnit() {
-		// *** valid units that should work
-
-		// unit constructed from valid eV string
-		unitString = "eV";
-		value = "12.89";
-		q = Quantity.valueOf(Double.valueOf(value), NonSI.ELECTRON_VOLT);
-		u = q.getUnit();
-		assertTrue("unit string should be " + unitString, u.equals(QuantityFactory.createUnitFromString(unitString)));
-
-		// *** range tests
-
-		// *** invalid requested values
-
-		// unit constructed from null string
-		unitString = null;
-		assertTrue("unit string should be " + unitString, null == QuantityFactory.createUnitFromString(unitString));
-
-		// unit constructed from empty string
-		unitString = "";
-		u = Unit.ONE;
-		assertTrue("unit string should be " + unitString, u.equals(QuantityFactory.createUnitFromString(unitString)));
-
-		// unit constructed from silly string
-		unitString = "sticksOfRhubarb";
-		assertTrue("unit string should be null", null == QuantityFactory.createUnitFromString(unitString));
+	@Test(expected = NullPointerException.class)
+	public void testCreateFromObjectPyStringInvalid() {
+		QuantityFactory.createFromObject(new PyString("abcdef"), MILLI(METER));
 	}
 
-	/**
-	 * Test creation of other units
-	 */
 	@Test
-	public void testCreateFromObject() {
-		value = "3.142";
-		Double d = new Double(value);
-		Object o = d;
-		q = Quantity.valueOf(Double.valueOf(value), SI.MILLI(SI.METER));
-		assertTrue("quantity factory length not at expected value " + value, q.equals(QuantityFactory.createFromObject(
-				o, SI.MILLI(SI.METER))));
+	public void testCreateFromObjectPyFloat() {
+		final double value = 3.142;
+		final Quantity expected = Quantity.valueOf(value, MILLI(METER));
+		assertEquals(expected, QuantityFactory.createFromObject(new PyFloat(value), MILLI(METER)));
+	}
 
-		value = "345";
-		Integer i = new Integer(value);
-		o = i;
-		q = Quantity.valueOf(Integer.valueOf(value).doubleValue(), SI.MILLI(SI.METER));
-		assertTrue("quantity factory length not at expected value " + value, q.equals(QuantityFactory.createFromObject(
-				o, SI.MILLI(SI.METER))));
+	@Test
+	public void testCreateFromObjectPyInteger() {
+		final int value = 345;
+		final Quantity expected = Quantity.valueOf(value, MILLI(METER));
+		assertEquals(expected, QuantityFactory.createFromObject(new PyInteger(value), MILLI(METER)));
+	}
 
-		value = "3.142";
-		o = value + " mm";
-		q = Quantity.valueOf(Double.valueOf(value), SI.MILLI(SI.METER));
-		assertTrue("quantity factory length not at expected value " + value, q.equals(QuantityFactory.createFromObject(
-				o, SI.MILLI(SI.METER))));
+	@Test
+	public void testCreateFromObjectQuantity() {
+		final Quantity inputQuantity = Quantity.valueOf(0.258, METER);
+		final Quantity expected = Quantity.valueOf(258, MILLI(METER));
+		assertEquals(expected, QuantityFactory.createFromObject(inputQuantity, MILLI(METER)));
+	}
+
+	@Test(expected = ConversionException.class)
+	public void testCreateFromObjectQuantityInvalidConversion() {
+		final Quantity inputQuantity = Quantity.valueOf(0.258, METER);
+		QuantityFactory.createFromObject(inputQuantity, RADIAN);
+	}
+
+	@Test
+	public void testCreateFromObjectDimensionless() {
+		final double value = 9.237;
+		final Quantity expected = Quantity.valueOf(value, Unit.ONE);
+		assertEquals(expected, QuantityFactory.createFromObject(Dimensionless.valueOf(value), Unit.ONE));
+	}
+
+	@Test(expected = ConversionException.class)
+	public void testCreateFromObjectDimensionlessInvalidConversion() {
+		final double value = 9.237;
+		QuantityFactory.createFromObject(Dimensionless.valueOf(value), METER);
 	}
 }
